fixed latest requests for MCWEB-150

--- a/web/ci/css/jquery.ad-gallery.css
+++ b/web/ci/css/jquery.ad-gallery.css
@@ -21,8 +21,8 @@
       border: 1px solid #CCC;
     }
 	.ad-gallery .ad-image-wrapper .ad-image img {
-      width: 408px;
-     height: 300px;
+      /*width: 408px;
+     height: 300px;*/
     }
     .ad-gallery .ad-image-wrapper .ad-next {
       position: absolute;
