--- a/web/ci/css/quick_view.css
+++ b/web/ci/css/quick_view.css
@@ -283,6 +283,7 @@ span.free-breakfast {
     overflow-y: auto;
     overflow-x: hidden;*/
     padding: 10px 17px;
+    padding-right: 0;
     width: 96%;
 }
 .group {
