--- a/web/ci/css/compare_property_print.css
+++ b/web/ci/css/compare_property_print.css
@@ -171,6 +171,9 @@ span.rating-cat {
     left: 7px;
     position: absolute;
     top: 5px;
+    width: 194px;
+    overflow: hidden;
+    height: 1em;
 }
 span.rating-value {
     display: block;
