fixed latest requests for MCWEB-470

--- a/web/ci/css/compare_property_print.css
+++ b/web/ci/css/compare_property_print.css
@@ -218,3 +218,13 @@ float: left;
 .com_div {
 	margin-top: 5px;
 }
+
+.com_div label {
+	color: #3087C9;
+	cursor: pointer;
+}
+
+.hostel_list .info h2 {
+	width: 290px;
+	display: inline-block;
+}
