--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2705,10 +2705,16 @@ width: 275px;}
 #filter_map_leftSide .box_content{
     padding: 0;
 }
-#filter_map_rightSide{
+#filter_map_rightSide_container{
     width: 60% !important;
     float: right;    
     height: 100%;
+    overflow: hidden;
+}
+
+#filter_map_rightSide{
+    width: 97% ;
+     height: 90% !important;
 }
 
 #map_filter_popup{
@@ -2755,3 +2761,25 @@ width: 275px;}
 /*.filter_popup_content_text{
     font-size:10px;
 }*/
+
+#filter_map_showProperties{
+   background: -moz-linear-gradient(center top , #8FC800 0%, #7DB619 100%) repeat scroll 0 0 transparent;
+    border-color: #8FC800;
+    border-radius: 50px 50px 50px 50px;
+    border-style: solid;
+    border-width: 1px;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.6);
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    float: right;
+    font-family: sans-serif;
+    font-size: 10.5pt;
+    font-weight: bold;
+    margin-bottom: 2px;
+    margin-right: 200px;
+    margin-top: 3px;
+    padding: 10px 18px;
+    text-decoration: none;
+    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
+}
