--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -1145,11 +1145,26 @@ p.deal {
 	clear:both;
 }
 .icon-nbpeople{
-	padding-right:15px;
-	background: url(../images/V2/icon_nbpeople1.png) no-repeat scroll center right transparent;	
-	float:left;
-	margin-top:0px !important;
-	margin-right:7px;
+	padding-left:15px;
+        float:left;
+        margin-top:0px !important;
+        margin-right:17px;
+        background-attachment: scroll;
+        background-color: transparent;
+        background-image: url(../images/V2/icon_nbpeople1.png);
+        background-repeat: no-repeat;
+        background-position: 0px 0px;
+}
+.icon-nbpeople span {
+        -webkit-border-radius: 9px;
+        -moz-border-radius: 9px;
+        border-radius: 9px;
+        width: 20px;
+        display: inline-block;
+        background-color: #227BBD;
+        color: #FFFFFF;
+        padding-bottom: 2px;
+        padding-top: 1px;
 }
 .nbpeople-table.icon-nbpeople{
 	float:none;
@@ -1165,7 +1180,7 @@ p.deal {
 .nbpeople-table.nbpeople-1, .private-people.nbpeople-1{
 	background: url(../images/V2/icon_nbpeople.png) no-repeat scroll center left transparent;
 	padding:0px 0px 0px 0px;
-	display:block;
+	display:inline-block;
 	text-indent:-99999px;
 	margin-right:0px;
 	width:10px;
