MCWEB-370 District and Landmark new little widget

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2713,7 +2713,7 @@ color:#3087C9;
 width: 275px;}
 
 #filter_map_leftSide{
-    width: 400px;
+    width: 470px;
     float: left;  
     height: 450px;
 }
@@ -2721,7 +2721,7 @@ width: 275px;}
     padding: 0;
 }
 #filter_map_rightSide_container{
-    width: 58% !important;
+    width: 51% !important;
     float: right;    
     height: 100%;
     overflow: hidden;
@@ -2757,12 +2757,12 @@ width: 275px;}
     margin-top: 5px;
     margin-bottom: 5px;
     padding: 5px 0 0 5px;
-    width: 400px;
+/*    width: 400px;*/
     margin-left: -3px;
     display: block;
 }
 #cb_group_landmarks_filter li, #cb_group_districts_filter li{
-    width: 172px;
+    width: 215px;
     /*dispay: inline;*/
     float:left;
     font-size:10px;
@@ -2791,13 +2791,13 @@ width: 275px;}
     font-size: 10.5pt;
     font-weight: bold;
     margin-bottom: 2px;
-    margin-right: 65px;
-    margin-left: 65px;
+    margin-right: 38px;
+    margin-left: 38px;
     margin-top: 3px;
     padding: 10px 18px;
     text-decoration: none;
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
-    width: 430px;
+    width: 400px;
    }
 
 /*compare property css end*/
