MCWEB-558_HW-Google-Maps-issue

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2835,3 +2835,12 @@ width: 275px;}
 .property_info_hover{
     background-color: #F9F9F9;
 }
+
+#sidebar{
+/*    margin-left: -995px;
+    display: inline;
+    float: left;*/
+/*   left: 66px;
+    position: fixed;
+    top: 242px;*/
+}
