MCWEB-370_District-and-Landmark-new-little-widgetMCWEB-420 Map for 20 results

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2843,4 +2843,9 @@ width: 275px;}
 /*   left: 66px;
     position: fixed;
     top: 242px;*/
+
+/*    left: 120px;
+    position: fixed;
+    top: 200px;
+ width: 19%;*/
 }
