--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -1801,6 +1801,7 @@ ul.account-nav li a, ul.account-nav li span{ display:block; color:#464646; font-
 
 span.account-bus{  height:65px; display:block; text-indent:-9999px; background:url(../images/account-bus.png) no-repeat top left; }
 a.account-reserv{	 background:url(../images/account-reserv.png) no-repeat center left; padding:15px 0px 15px 60px;	}
+a.saved-properties {	 background:url(../images/saved_favorite.png) no-repeat center left; padding:15px 0px 15px 60px;	}
 a.account-review{	 background:url(../images/account-review.png) no-repeat center left; padding:15px 0px 15px 50px;}
 a.account-profile{	 background:url(../images/account-profile.png) no-repeat center left; padding:15px 0px 15px 60px;}
 a.account-groupe{	 background:url(../images/account-groupe.png) no-repeat center left; padding:10px 0px 10px 60px;}
@@ -2387,10 +2388,15 @@ text-align: -webkit-center;
 
 .save_to_favorites_options {
 	margin-top: 11px;
+	float: left;
+	margin-right: 10px;
+	width: 160px;
 }
 
 .share-email {
 	margin-top: 2px;
+	width: 50px;
+	float: left;
 }
 
 #save_property_dialog,
@@ -2409,6 +2415,10 @@ text-align: -webkit-center;
 	display: none;
 }
 
+#save_property_dialog {
+	background-color: #eee;
+}
+
 #save_property_dialog .content_container {
 	margin: 0 auto;
 	height: 450px;
@@ -2418,11 +2428,15 @@ text-align: -webkit-center;
 	background-color: #fff;
 	opacity: 1;
 	border: 1px solid #b3b3b3;
+	padding: 10px;
 }
 
 #save_property_dialog .close {
 	float: right;
 	width: 50px;
+	position: absolute;
+	margin-left: 615px;
+	margin-top: -55px;
 }
 
 #share-overlay .content {
