MCWEB-420 Map for 20 results

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2910,3 +2910,22 @@ width: 275px;}
 #save_property_dialog .fav_details .characters {
 	text-align: right;
 }
+
+/* change hostel background*/
+.property_info_hover{
+    background-color: #F9F9F9;
+}
+
+#sidebar{
+/*    margin-left: -995px;
+    display: inline;
+    float: left;*/
+/*   left: 66px;
+    position: fixed;
+    top: 242px;*/
+
+/*    left: 120px;
+    position: fixed;
+    top: 200px;
+ width: 19%;*/
+}
