MCWEB-420_Map for 20 results

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2924,6 +2924,6 @@ width: 275px;}
 #sidebar.fix_sidebar_position{
     left: 120px;
     position: fixed;
-    width: 19%;
+    width: 253px;
     top: 0;
 }
