MCWEB-420_Map for 20 results
still need to fix marker show

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2370,6 +2370,7 @@ a.flag-asia{ background:url(../images/V2/flag-asia.png) no-repeat center left; }
 	padding: 4px 3px 4px 1px;
 	position: absolute;
 	top: 11px;
+        z-index: 1;
 }
 .searchcenter{
 width: 100%;
