--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -3040,3 +3040,7 @@ width: 275px;}
 #save_property_dialog .box_content label {
 	color: #000;
 }
+
+.ui-datepicker td span, .ui-datepicker td a {
+	margin: 0 !important;
+}
