--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2915,3 +2915,21 @@ width: 275px;}
 #save_property_dialog .fav_details .characters {
 	text-align: right;
 }
+
+#check_in_out {
+	margin-left: 5px;
+	cursor: pointer;
+}
+
+#tooltip_content {
+	display: none;
+	width: 590px;
+	position: absolute;
+	margin-left: 200px;
+	margin-top: -35px;
+	font-size: 1.1em;
+	background-color: #fff;
+	text-align: left;
+	line-height: normal;
+	color: #3087C9;
+}
