MCWEB-420_Map for 20 results
In ff on laptop with screen resolution 1440 x 900 I have the following layout error

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2923,9 +2923,9 @@ width: 275px;}
 }
 
 #sidebar.fix_sidebar_position{
-    left: 120px;
+    left: 122px;
     position: fixed;
-    width: 253px;
+    /*width: 23%;*/
     top: 0;
 }
 
