--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -3045,3 +3045,9 @@ width: 275px;}
 .ui-datepicker td span, .ui-datepicker td a {
 	margin: 0 !important;
 }
+
+.actions input,
+#login-connect-page,
+#register-page {
+	cursor: pointer;
+}
