--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -801,7 +801,7 @@ nav.city-tools ul li a{
 	font-weight:bold;
 	color:#3087C9;
 	float:left;
-	padding:7px 15px;
+	padding:7px;
 	display:block;
 	border-right:1px solid #D0DAE0;
 }
