--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -792,18 +792,30 @@ nav.city-tools ul{
 nav.city-tools ul li{
 	display:inline;
 	float:left;
-	margin-right:0px;
+	margin: 0px;
+	padding: 0;
+	border-right: 1px solid #D0DAE0;
 }
 
-nav.city-tools ul li.title{padding:7px 15px;border-right:1px solid #D0DAE0;}
+nav.city-tools ul li.inputs {
+	border-right: none;
+}
 
-nav.city-tools ul li a{
+nav.city-tools ul li.title{padding:7px;}
+
+nav.city-tools ul li a {
 	font-weight:bold;
 	color:#3087C9;
 	float:left;
-	padding:7px;
+	padding-top:7px;
+	padding-bottom:7px;
 	display:block;
-	border-right:1px solid #D0DAE0;
+	width: 100%;
+	text-align: center;
+}
+
+#sortname-tous {
+	padding-left: 5px;
 }
 
 nav.city-tools ul li a:hover span{
@@ -842,8 +854,8 @@ nav.city-tools ul li.inputs{ padding:7px 15px; line-height:20px; font-weight:nor
 nav.city-tools ul li.inputs input.checkbox {
 		float: left;
 		margin:0px;
-    margin-right: 10px;
-		margin-top:5px;
+		margin-right: 4px;
+		margin-top:2px;
 }
 nav.city-tools ul li.inputs span{ padding-top:5px; padding-bottom:5px;}
 nav.city-tools ul li.inputs span span{ padding-top:0px; padding-bottom:0px;}
@@ -1004,7 +1016,9 @@ background-image:         linear-gradient(to bottom, #F5F7EF, #EAF0DE);
 }
 
 .hb_frame .info_indent{
-	margin-left:126px;
+	margin-left:25px;
+	float: right;
+	width: 405px;
 }
 
 .hostel_list .info h2{
@@ -1064,8 +1078,10 @@ ul.avail li {
 .loading-dispo-city p{
 	margin-bottom:0px;
 }
-.amenities{ margin-left:126px;}
-.hb_frame .amenities{ margin-left:126px;}
+.hb_frame .amenities{
+	float: right;
+	width: 405px;	
+}
 .amenities.no-indent{margin-left:0px;}
 span.icon_facility{display:block; float:left; text-align:right; padding:0px;margin-bottom:5px; height:30px; line-height:30px; margin-right:15px; margin-top:5px;}
 /*span.icon_facility span{display: block; float: left;padding: 8px 0 8px 0px;}*/
@@ -1112,22 +1128,20 @@ p.minnight{font-style:italic; font-weight:bold; margin-bottom:0px;}
 
 div.price{
 	text-align:right;
-	margin-bottom:7px;	
-	margin-top:-20px;
 }
 
 div.price strong {
-		color: #6DA903;
-		font-size: 1.6em;
-		font-weight: bold;
-		padding-top:5px;
-		line-height:1.2em;
+	color: #6DA903;
+	font-size: 1.6em;
+	font-weight: bold;
+	padding-top:5px;
+	line-height:1.2em;
+	margin-bottom: 20px;
 }
 
 div.price span{
 	display:block;
 	font-weight:bold;
-	margin-top:20px;
 }
 
 span.rebate-price {
@@ -2542,15 +2556,22 @@ text-align: -webkit-center;
   margin-right:5px;
 }
 
+.remove_from_search_trigger {
+	position: absolute;
+	margin-left: 241px;
+	margin-top: -20px;
+}
+
 /*  start districts and landmarks in city page  */
  
 .city_hostel_districts , .city_hostel_landmarks{
-          margin-left: 126px;
+	float: right;
+	width: 405px;
 }
 
 .city_hostel_districts_district , .city_hostel_landmarks_landmark{
-          font-weight: bold;
-          color: #999999;
+	font-weight: bold;
+	color: #999999;
 }
 
  .city_hostel_districts_values , .city_hostel_landmarks_values {
@@ -2866,13 +2887,21 @@ width: 275px;}
 
 /*compare property css end*/
 
+.prices_toggle {
+	clear: both;
+	float: right;
+	text-align: left;
+	width: 225px;
+	margin-top: -14px;
+}
+
 .remove_from_search_options {
 	position: absolute;
-	margin-left: 340px;
+	margin-left: 560px;
 	background-color: #fff;
 	border: 1px solid #ccccc7;
 	padding: 10px;
-	margin-top: -33px;
+	margin-top: 0px;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 	display: none;
