fixes for quickview

--- a/web/ci/css/quick_view.css
+++ b/web/ci/css/quick_view.css
@@ -69,10 +69,8 @@ body {
 	width: 100%;
 }
 .bottom-feature-data {
-	background-color: #fff;
 	display: inline-block;
-	padding: 10px 10px;
-	width: 95%;
+	width: 100%;
 }
 .bottom-feature-data p {
 	border-bottom: 1px dashed #AAAAAA;
@@ -107,9 +105,9 @@ body {
 
 .list-left .check{
 	float: left;
-    padding-bottom: 10px;
-    width: 42%;
-	padding-left: 20px;
+	padding-bottom: 8px;
+	margin-right: 10px;
+	padding-left: 18px;
 	background: url("../images/V2/icon-check-green.png") no-repeat scroll 0 4px transparent;
 }
 .bottom-feature-data .list-right {
