--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -1858,7 +1858,7 @@ padding:10px 15px 10px 10px;	color:#ffffff;	text-shadow:1px 1px 1px #000000;font
 #map_button_side img{width:100%; margin-bottom:-2px;}
 .map_button_box{position:relative; overflow:hidden;}
 .box_content.map_button_box{padding:0px; border:1px solid #80B422;}
-.map_button_box a{display:block; }
+.map_button_box a{display:block;}
 .map_button_box a:hover{text-decoration:none;}
 .map_button_box span{padding:10px 15px 10px 10px; color:#ffffff; text-shadow:1px 1px 1px #000000;font-size:1.2em;	display:block;	position:absolute;	bottom:0px;right:0px;background:url("../images/V2/menu-back.png") repeat-x scroll left center #082747; margin-left: 60px;}
 .map_button_box span strong{margin-left: 24px; padding-left:23px; float: right; font-size: 12.5px;}
@@ -2388,7 +2388,15 @@ text-align: -webkit-center;
 .hostel_mapView_districts , .city_mapView_districts{
      display: block;
      overflow: hidden;
-     clear:both;
+	width: 48%;
+}
+
+.hostel_mapView_districts {
+	float: left;
+}
+
+.city_mapView_districts {
+	float: right;
 }
 
 .save_to_favorites_options {
@@ -2581,7 +2589,10 @@ text-align: -webkit-center;
 .hostel_mapView_landmarks , .city_mapView_landmarks{
      display: block;
      overflow: hidden;
-     clear:both;
+}
+
+.hostel_mapView_landmarks {
+	width: 48%;
 }
 
 .hostel_mapView_landmarks input {
