--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -3149,13 +3149,20 @@ width: 275px;}
 }
 
 .yellow-bg {
-	background-color: #fccc07;
-	padding: 3px 5px;
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;
-	border-radius:4px;
+	background-color: #fccc07 !important;
+	padding: 3px 5px !important;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px;
 }
 
 #city_map_show_hostel{
     margin: 0;
+}
+
+#property_list span.icon_facility_extra3 span {
+	background: none;
+	display: inline;
+	float: none;
+	padding: 0;
 }
