--- a/web/ci/css/quick_view.css
+++ b/web/ci/css/quick_view.css
@@ -386,11 +386,10 @@ padding:0;
 }
 .bottom-feature-data ul li strong {
     background: none repeat scroll 0 0 #FCCC07;
-    border-radius: 3px 3px 3px 3px;
+    border-radius: 5px;
     color: #000000;
     font-weight: normal;
-    padding: 2px 10px;
-    text-transform: uppercase;
+    padding: 3px 5px;
 }
 #gallery {
     clear: both;
