--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -936,6 +936,7 @@ background-image:         linear-gradient(to bottom, #F5F7EF, #EAF0DE);
 	display:block;
 	line-height:180%;
 	color: rgb(112,146,190);
+	padding-top: 4px;
 }
 
 .averageRatingCaptionHW {
@@ -2932,8 +2933,8 @@ width: 275px;}
 
 .remove_from_search_options {
 	position: absolute;
-	margin-left: 455px;
-	width: 315px;
+	margin-left: 414px;
+	width: 360px;
 	background-color: #fff;
 	border: 1px solid #ccccc7;
 	padding: 10px;
