MCWEB-117_Compare-between-5-properties

--- a/web/ci/css/main.css
+++ b/web/ci/css/main.css
@@ -238,7 +238,7 @@ p.pad-left{ margin-left:10px;}
 .map-view { clear:both; padding:20px 10px 10px 15px;}
 .map-view img { padding:4px; border:1px solid #C7C7C7; margin-left:-0px;}
 .map-view .directions{ margin-top:15px;}
-#map_canvas, #street_panel{ width:610px; height:375px;}
+#map_canvas, #map_canvas_compareProperty, #street_panel{ width:610px; height:375px;}
 #map_canvas_large{ width:610px; height:375px;} 
 #street_panel_title img{ border: none;margin-left: 5px; margin-right:10px;padding: 0px; float:left; margin-top:-2px;}
 .city-view-page #map_canvas{ width:590px; height:375px;}
