--- a/web/ci/css/print.css
+++ b/web/ci/css/print.css
@@ -195,7 +195,7 @@ h1.single_title{
 .map-view { clear:both; padding:20px 10px 10px 15px;}
 .map-view img { padding:4px; border:1px solid #C7C7C7; margin-left:-0px;}
 .map-view .directions{ margin-top:15px;}
-#map_canvas, #street_panel{ width:100%; height:375px;}
+#map_canvas, #map_canvas_compareProperty, #street_panel{ width:100%; height:375px;}
 #map_canvas_large{ width:610px; height:375px;} 
 #street_panel_title img{ border: none;margin-left: 5px; margin-right:10px;padding: 0px; float:left; margin-top:-2px;}
 #map_wrap, #street_panel_wrap{ }
