--- a/web/ci/css/quick_view.css
+++ b/web/ci/css/quick_view.css
@@ -546,3 +546,7 @@ div.mapbubble p.price {
     margin-top: -4px;
     text-align: left;
 }
+
+#quick_preview_div .icon_facility_extra3 .description{
+	padding-top: 3px;
+}
