--- a/web/ci/css/compare_property_print.css
+++ b/web/ci/css/compare_property_print.css
@@ -70,7 +70,7 @@ a.micro_site_Link {
 	text-decoration: none;
 	font-size:15px;
 }
-.close_btn {
+.closeCompareProperty_btn {
 	cursor: pointer;
 	margin-left: auto;
 	margin-right: auto;
