--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2614,6 +2614,9 @@ text-align: -webkit-center;
         color: #999999;
      }
      
+.city_hostel_districts_values .content, .city_hostel_landmarks_values .content {
+	text-align: justify !important;
+}
 /*  End districts and landmarks in city page */
 
 /* start districts and landmarks in  hostel page */
