--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -3135,7 +3135,7 @@ width: 275px;}
 
 /* change hostel background*/
 .property_info_hover{
-    background-color: #F9F9F9;
+    background-color: #F9F9F9 !important;
 }
 
 #sidebar.fix_sidebar_position{
