--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2467,7 +2467,7 @@ text-align: -webkit-center;
 	margin: 0 auto;
 /*	height: 630px;*/
 	width: 618px;
-	top: 50%;
+	top: 39%;
 	position: absolute;
 	left: 50%;
 	color: #00359f;
@@ -2981,7 +2981,7 @@ width: 275px;}
 }
 
 #save_property_dialog .title {
-	padding: 15px 10px;
+	padding: 10px;
 	background-color: #00aeec;
 	color: #fff;
 	font-size: 1.3em;
