MCWEB-628 Train and airport

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -3224,3 +3224,10 @@ width: 275px;}
 #property_list .show_more_districts {
 	margin-top: 0;
 }
+
+.filter_landmark_image{
+    height: 16px;
+    vertical-align: middle;
+    width: 16px;
+    margin-left: -6px;
+}
